--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Lato:wght@100;400;700;900&family=Pacifico&family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="gamer.css">
 </head>
 <body>
+    <header>
+    <nav class="nav-section">
+
+        <div class="nav-logo">
+            <img src="./images/Frame.png" alt="logo"> 
+            <h3><span class="nav-G">G</span>amer</h3>
+        </div>
+        <div class="nav-links">
+            <div class="logo-text">
+                <a href="#">About us</a>
+                <a href="#">Developers</a>
+            </div>  
     
+        <div class="nav-icon-text">
+          <h6>Follow us On
+            <a href=""></a><img src="./images/Vector.png" alt=""></a>
+            <a href=""><img src="./images/tik-tok 1.png" alt=""></a>
+        </h6>
+          </div>
+                 </nav>
+</header>
 </body>
 </html>
