main section 80% done

--- a/index.html
+++ b/index.html
@@ -31,5 +31,35 @@
           </div>
                  </nav>
 </header>
+
+    <main>
+        <section class="main-section">
+
+        <div class="main-section-part">
+
+            <div class="main-section-text">
+                <h2>Play Like The <span class="main-goat">G.O.A.T.</span></h2>
+                
+                <h6>
+                    <a href=""><img src="./images/main-img1.png" alt="">1-Click instant play</a> <br>
+                    <a href=""><img src="./images/main-img2.png" alt="">1-Click instant play</a><br>
+                    <a href=""><img src="./images/main-img3.png" alt="">1-Click instant play</a>
+                </h6>
+            </div>
+            <div class="main-button">
+                <button class="sign-button">Sign In</button>
+                <button class="Go-button">Go Rogue</button>
+            </div>
+        </div>
+        <div class="main-section-img">
+            <img src="./images/main-section-img.png" alt="">
+
+        </div>
+        </section>
+    </main>
+
+
+    
+
 </body>
 </html>
