about section100% done.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,34 @@
 
         </div>
         </section>
+
+        <section class="about-gamer-section">
+            <div class="about-section-img">
+                <img src="./images/about-section.png" alt="image">
+            </div>
+            <div class="about-section-text">
+                <h1>We are gamer</h1>
+                <h6>An international digital games and entertainment <br> company. We develop, publish and distribute multiplayer <br> mobile games. We reach over 400 million players each <br> month and our audience keeps growing.</h6>
+                <button class="sign-button">know more</button>
+                <h3>Our purpose... <br> <span class="about-section-unleash">  “unleash the gamer in everyone”</span></h3>
+            </div>
+        </section>
+
+        <section class="Online-games-section">
+            <div class="online-games-text">
+
+            </div>
+            <div class="online-games-img">
+
+            </div>
+
+        </section>
+
+
+
+
     </main>
+
 
 
     
