online games section done

--- a/index.html
+++ b/index.html
@@ -71,9 +71,33 @@
 
         <section class="Online-games-section">
             <div class="online-games-text">
+                <h1>Online Games <span class="online-funny">Funny Videos</span> </h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
 
             </div>
             <div class="online-games-img">
+                <ul>
+                    <li><a href="#"><img src="./images/Rectangle 4.png" alt=""></a><h6>No Download. No Installs. Play games Instantly on Gamer.</h6></li>
+                    <li><a href="#"><img src="./images/Rectangle 5.png" alt=""></a><h6>Did you score? #unblockedgames #school </h6></li>
+                    <li><a href="#"><img src="./images/Rectangle 7.png" alt=""></a><h6>Breaking game records like OG</h6></li>
+                    <li><a href="#"><img src="./images/Rectangle 6.png" alt=""></a><h6>Busted gaming on school laptop, but you are still lit.</h6></li>
+                </ul>
+
+            </div>
+
+        </section>
+
+        <section class="features-section"> 
+            <div class="features-section-text">
+
+                <h1><span class="features-play">Play Instantly</span> <br>No Downloads <br>
+                    No Installs.</h1>
+                <p>Play games online for free without <br> downloading. Just click the Play button <br>and play instantly in your browser.</p>
+
+            </div>
+            <div class="features-section-img">
+                <img src="./images/Rectangle 55.png" alt=""><br>
+                <img src="./images/Rectangle 66.png" alt="">
 
             </div>
 
