features and g section 100% Done

--- a/index.html
+++ b/index.html
@@ -89,19 +89,42 @@
 
         <section class="features-section"> 
             <div class="features-section-text">
-
-                <h1><span class="features-play">Play Instantly</span> <br>No Downloads <br>
-                    No Installs.</h1>
+                <h3><span class="features-play">Play Instantly</span> <br>No Downloads <br>
+                    No Installs.</h3>
                 <p>Play games online for free without <br> downloading. Just click the Play button <br>and play instantly in your browser.</p>
 
             </div>
             <div class="features-section-img">
-                <img src="./images/Rectangle 55.png" alt=""><br>
-                <img src="./images/Rectangle 66.png" alt="">
+                <img src="./images/Rectangle 55.png" alt="">
+                <img class="imgae-b" src="./images/Rectangle 66.png" alt="">
 
             </div>
 
         </section>
+        <section class="g-section"> 
+            <div class="g-section-img">
+                <img src="./images/Rectangle 67.png" alt="">
+                <img class="g2-img"  src="./images/Rectangle 78.png" alt="">
+
+            </div>
+            <div class="g-section-text">
+                <h3><span class="g-play">Play games</span> <br> <span class="g-play">Online</span> Anywhere,<br> Anytime!</h3>
+            </div>
+
+        </section>
+
+
+    <section class="">
+        <div>
+
+        </div>
+        <div>
+        
+        </div>
+
+
+    </section>
+
 
 
 
