position section done 100%

--- a/index.html
+++ b/index.html
@@ -114,12 +114,42 @@
         </section>
 
 
-    <section class="">
-        <div>
+    <section class="career-section">
+        <div class="career-section-text">
+            <h2>Careers</h2>
+            <p>Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
 
+            <div class="positions" >
+
+                <div>
+                    <h3>Multimedia Artist +
+                    <h3>  Data Engineer +</h3>
+                    <h3>Android Engineer</h3>
+                    <h3>Server Developer +</h3>
+                    <h3>Group Financial Accountant +</h3>
+                    <h3> Senior User Acuisition Specialist +</h3>
+                </div>
+                <div>
+                    <h3>Lisbon, Portugal</h3>
+                    <h3>Lisbon, Portugal</h3>
+                    <h3>Zoetermeer, Netherland</h3>
+                    <h3>Lisbon, Portugal</h3>
+                    <h3>London, United Kingdom</h3>
+                    <h3>Lisbon, Portugal</h3>
+                </div>
+            </div>
+            <button class="p-btn">See all positions</button>
         </div>
-        <div>
-        
+        <div class="career-section-img">
+            <img src="./images/Group 65.png" alt="">
+        </div>
+    </section>
+
+    <section class="action-section">
+
+        <div class="action-button">
+         <a href="#"><img class="button-j" src="" alt=""></a>
+
         </div>
 
 
