website done without resposive

--- a/index.html
+++ b/index.html
@@ -196,11 +196,40 @@
 </section>
     </main>
 
-    <footer class="footer-section">
-
-       <div>
-        
+    <footer>
+       <div class="footer-logo">
+        <img src="./images/Frame.png" alt="">
+        <h1><span class="footer-g">G</span>amer</h1>
        </div>
+
+       <div class="footer-links">
+        <ul>
+            <a href="#">Our Story</a>
+            <a href="#">Games</a>
+            <a href="#">Web Games</a>
+            <a href="#">Careers</a>
+            <a href="#">Support</a>
+            <a href="#">My Account</a>
+        </ul>
+       </div>
+
+       <div class="img-links">
+        <a href="#"><img src="./images/fi-1.png" alt=""></a>
+        <a href="#"><img src="./images/fi-2.png" alt=""></a>
+        <a href="#"><img src="./images/fi-3.png" alt=""></a>
+        <a href="#"><img src="./images/fi-4.png" alt=""></a>
+        <a href="#"><img src="./images/fi-5.png" alt=""></a>
+        <a href="#"><img src="./images/fi-6.png" alt=""></a>
+       </div>
+
+       <div class="conditions">
+        <h6>Terms and Conditions</h6>
+        <h6>Privacy Policy</h6>
+        <h6>Cookie Policy</h6>
+        <h6>Privacy Settings</h6>
+      </div>
+
+       <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
 
     </footer>
 
